{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 6,
  "lineage": "8394d737-902a-4dc1-0a22-54486bf4a222",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c32d0c062e5cfaf0",
            "domain": "vpc",
            "id": "eipalloc-0c32d0c062e5cfaf0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-221-184-14.compute-1.amazonaws.com",
            "public_ip": "44.221.184.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Terraform Elastic IP"
            },
            "tags_all": {
              "Name": "Terraform Elastic IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183295411943:security-group/sg-075297bd5230fdcb4",
            "description": "Adding security for learning purpose",
            "egress": [],
            "id": "sg-075297bd5230fdcb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "44.221.184.14/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-SG",
            "name_prefix": "",
            "owner_id": "183295411943",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04658d0b7493013f0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "inbound_rule_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183295411943:security-group-rule/sgr-0bab3147199256894",
            "cidr_ipv4": "44.221.184.14/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0bab3147199256894",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-075297bd5230fdcb4",
            "security_group_rule_id": "sgr-0bab3147199256894",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_security_group.terraform-SG"
          ]
        }
      ]
    }
  ]
}